# serpermcp

./: Dockerfile  README.md  pyproject.toml
src/serper_mcp_server/: __init__.py
